--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
             <version>1.6.6</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
